--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -21,3 +21,7 @@ gradlePlugin {
         }
     }
 }
+
+tasks.withType(JavaCompile).configureEach {
+    it.options.errorprone.disable 'JavaxInjectOnAbstractMethod'
+}
