--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'groovy'
+apply plugin: 'com.palantir.external-publish-gradle-plugin'
 
 dependencies {
     implementation project(':gradle-jdks-distributions')
@@ -20,4 +21,8 @@ gradlePlugin {
             implementationClass = 'com.palantir.gradle.jdks.JdksPlugin'
         }
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    it.options.errorprone.disable 'JavaxInjectOnAbstractMethod'
 }
