--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'groovy'
+apply plugin: 'com.palantir.external-publish-jar'
 apply plugin: 'com.palantir.external-publish-gradle-plugin'
 
 dependencies {
@@ -21,6 +22,13 @@ gradlePlugin {
             implementationClass = 'com.palantir.gradle.jdks.JdksPlugin'
         }
     }
+}
+
+pluginBundle {
+    website = 'https://github.com/palantir/gradle-jdks'
+    vcsUrl = 'https://github.com/palantir/gradle-jdks'
+    description = 'Download specific JDKs versions automatically'
+    tags = ['java', 'jdks']
 }
 
 tasks.withType(JavaCompile).configureEach {
