Fix Zulu version stringly typing

--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     annotationProcessor 'org.immutables:value'
 
     testImplementation 'com.netflix.nebula:nebula-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.assertj:assertj-core'
 }
 
 gradlePlugin {
