--- a/versions.props
+++ b/versions.props
@@ -4,6 +4,7 @@ com.fasterxml.jackson.core:* =  2.13.2
 com.netflix.nebula:nebula-test = 10.1.0
 org.junit.jupiter:* = 5.8.2
 org.assertj:assertj-core = 3.22.0
+org.mockito:* = 4.5.1
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 4.119.0
