Try using lazy map thing from baseline

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
     repositories {
         gradlePluginPortal()
         mavenCentral() { metadataSources { mavenPom(); ignoreGradleMetadataRedirection() } }
+        mavenLocal()
     }
 
     group 'com.palantir.gradle.jdks'
