--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     api project(':gradle-jdks-distributions')
 
     implementation 'com.palantir.baseline:gradle-baseline-java'
+    implementation 'com.palantir.gradle.utils:lazily-configured-mapping'
 
     compileOnly 'org.immutables:value::annotations'
     annotationProcessor 'org.immutables:value'
