--- a/versions.props
+++ b/versions.props
@@ -5,6 +5,7 @@ com.netflix.nebula:nebula-test = 10.1.0
 org.junit.jupiter:* = 5.8.2
 org.assertj:assertj-core = 3.22.0
 org.mockito:* = 4.5.1
+com.palantir.gradle.utils:* = 0.1.0
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 4.133.0
