--- a/changelog/@unreleased/pr-41.v2.yml
+++ b/changelog/@unreleased/pr-41.v2.yml
@@ -1,5 +1,5 @@
-type: improvement
-improvement:
+type: fix
+fix:
   description: The Azul JDK distribution uses tar.gz everywhere except windows, matching
     available distributions from the Azul CDN
   links:
