--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:4.0.0'
         classpath 'com.palantir.gradle.externalpublish:gradle-external-publish-plugin:1.11.0'
         classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.24.0'
         classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:2.11.0'
