make sure we actually run integTest

--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -8,6 +8,8 @@ testSets {
     integTest
 }
 
+tasks.build.dependsOn tasks.integTest
+
 dependencies {
     api project(':gradle-jdks-distributions')
 
