musl/alpine linux support (#46)
Use musl/alpine JDKs on linux distributions that use musl rather than glibc (like alpine linux).

--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -2,6 +2,13 @@ apply plugin: 'java-gradle-plugin'
 apply plugin: 'groovy'
 apply plugin: 'com.palantir.external-publish-jar'
 apply plugin: 'com.palantir.external-publish-gradle-plugin'
+apply plugin: 'org.unbroken-dome.test-sets'
+
+testSets {
+    integTest
+}
+
+tasks.build.dependsOn tasks.integTest
 
 dependencies {
     api project(':gradle-jdks-distributions')
