--- a/changelog/@unreleased/pr-55.v2.yml
+++ b/changelog/@unreleased/pr-55.v2.yml
@@ -1,5 +1,5 @@
 type: fix
 fix:
-  description: Handler older glibc in libc autodetection
+  description: Handle older glibc in libc autodetection
   links:
   - https://github.com/palantir/gradle-jdks/pull/55
