--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     implementation 'com.palantir.baseline:gradle-baseline-java'
     implementation 'com.palantir.gradle.utils:lazily-configured-mapping'
+    implementation 'com.google.guava:guava'
 
     compileOnly 'org.immutables:value::annotations'
     annotationProcessor 'org.immutables:value'
