wrote some code

--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -53,4 +53,5 @@ pluginBundle {
 
 tasks.withType(JavaCompile).configureEach {
     it.options.errorprone.disable 'JavaxInjectOnAbstractMethod'
+    it.options.errorprone.disable 'StrictUnusedVariable'
 }
