--- a/gradle-jdks-json/build.gradle
+++ b/gradle-jdks-json/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     annotationProcessor 'org.immutables:value'
     compileOnlyApi 'org.immutables:value::annotations'
+    compileOnlyApi 'org.immutables:serial'
 
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
