--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'gradle-jdks-root'
 include 'gradle-jdks'
 include 'gradle-jdks-distributions'
 include 'gradle-jdks-json'
+include 'gradle-jdks-certs'
