move integration tests & refactor

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'gradle-jdks'
 include 'gradle-jdks-distributions'
 include 'gradle-jdks-json'
 include 'gradle-jdks-certs'
+include 'gradle-jdks-integration-tests'
