--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -13,6 +13,7 @@ tasks.build.dependsOn tasks.integTest
 dependencies {
     api project(':gradle-jdks-distributions')
     api project(':gradle-jdks-json')
+    api project(':gradle-jdks-certs')
 
     implementation('com.palantir.baseline:gradle-baseline-java') {
         exclude group: 'com.diffplug.spotless', module: 'spotless-plugin-gradle'
