--- a/versions.props
+++ b/versions.props
@@ -7,6 +7,7 @@ org.junit.jupiter:* = 5.10.2
 org.assertj:assertj-core = 3.25.3
 org.mockito:* = 5.11.0
 com.palantir.gradle.utils:* = 0.1.0
+com.google.guava:guava = 33.1.0-jre
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 5.26.0
