--- a/versions.props
+++ b/versions.props
@@ -8,6 +8,7 @@ org.assertj:assertj-core = 3.25.3
 org.mockito:* = 5.11.0
 com.palantir.gradle.utils:* = 0.1.0
 com.google.guava:guava = 33.1.0-jre
+commons-io:commons-io = 2.11.0
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 5.26.0
