--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,5 @@ rootProject.name = 'gradle-jdks-root'
 include 'gradle-jdks'
 include 'gradle-jdks-distributions'
 include 'gradle-jdks-json'
-include 'gradle-jdks-certs'
+include 'gradle-jdks-setup'
 include 'gradle-jdks-integration-tests'
