--- a/gradle-jdks-integration-tests/src/jdkIntegrationTest/resources/Dockerfile.template
+++ b/gradle-jdks-integration-tests/src/jdkIntegrationTest/resources/Dockerfile.template
@@ -1,4 +1,5 @@
 FROM @BASE_IMAGE@
+@EXTRA_RUN_STEPS@
 COPY ./gradle /gradle
-RUN apt-get update && apt-get install -y curl && echo "alias curl='curl -k'" >> /root/.bash_profile && chmod +x /gradle/testing-script.sh
-CMD ["/bin/bash", "-i", "-c", "/gradle/testing-script.sh"]
+RUN chmod +x /gradle/testing-script.sh
+CMD ["@SHELL@", "/gradle/testing-script.sh"]
