--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.palantir.external-publish-jar'
 apply plugin: 'org.unbroken-dome.test-sets'
 
 dependencies {
+    // Avoid adding compile dependencies here, as they will also need to be added in the gradle-jdks-setup*.jar
+
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
     testImplementation 'commons-io:commons-io'
