--- a/gradle-jdks-integration-tests/build.gradle
+++ b/gradle-jdks-integration-tests/build.gradle
@@ -1,17 +1,20 @@
 apply plugin: 'java'
 apply plugin: 'org.unbroken-dome.test-sets'
-apply plugin: 'groovy'
 
-dependencies {
-    testImplementation project(":gradle-jdks")
-    testImplementation project(":gradle-jdks-setup")
-    testImplementation 'com.netflix.nebula:nebula-test'
-    testImplementation 'commons-io:commons-io'
-    testImplementation 'com.google.guava:guava'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.assertj:assertj-core'
+testSets {
+    integrationTest
 }
 
-tasks.test {
+dependencies {
+    integrationTestImplementation project(":gradle-jdks")
+    integrationTestImplementation project(":gradle-jdks-setup")
+
+    integrationTestImplementation 'commons-io:commons-io'
+    integrationTestImplementation 'com.google.guava:guava'
+    integrationTestImplementation 'org.junit.jupiter:junit-jupiter'
+    integrationTestImplementation 'org.assertj:assertj-core'
+}
+
+tasks.integrationTest {
     environment("PROJECT_VERSION", project.version)
 }
