--- a/versions.props
+++ b/versions.props
@@ -9,6 +9,7 @@ org.mockito:* = 5.11.0
 com.palantir.gradle.utils:* = 0.1.0
 com.google.guava:guava = 33.1.0-jre
 commons-io:commons-io = 2.16.0
+com.palantir.gradle.auto-parallelizable:* = 1.4.0
 
 # dependency-upgrader:OFF
 com.palantir.baseline:* = 5.26.0
