--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -9,7 +9,7 @@ testSets {
 
 dependencies {
     // Avoid adding large compile dependencies here, as they will also need to be added in the gradle-jdks-setup*.jar
-    implementation project(':gradle-jdks-distributions')
+    implementation project(':gradle-jdks-setup-common')
 
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
@@ -23,6 +23,7 @@ dependencies {
 }
 
 task fatJar(type: Jar) {
+    dependsOn tasks.jar
     manifest {
         attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.GradleJdkInstallationSetup'
     }
