--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 }
 
 task fatJar(type: Jar) {
-    dependsOn tasks.jar
+    dependsOn tasks.jar, ':gradle-jdks-setup-common:jar'
     manifest {
         attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.GradleJdkInstallationSetup'
     }
