--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -8,7 +8,7 @@ testSets {
 }
 
 dependencies {
-    // Avoid adding large compile dependencies here, as they will also need to be added in the gradle-jdks-setup*.jar
+    // Avoid adding large compile dependencies here, as they will also be added in the gradle-jdks-setup-all*.jar using the fatJar task
     implementation project(':gradle-jdks-setup-common')
 
     testImplementation 'org.junit.jupiter:junit-jupiter'
