--- a/versions.props
+++ b/versions.props
@@ -14,7 +14,7 @@ com.palantir.gradle.auto-parallelizable:* = 1.4.0
 org.ow2.asm:asm = 9.2.1
 
 # dependency-upgrader:OFF
-com.palantir.baseline:* = 5.53.0
+com.palantir.baseline:* = 5.53.0-4-g0eccf57.dirty
 # dependency-upgrader:ON
 
 # conflict resolution
