--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     integrationTestImplementation 'org.assertj:assertj-core'
 }
 
-task fatJar(type: Jar) {
+tasks.register('fatJar', Jar) {
     dependsOn tasks.jar, ':gradle-jdks-setup-common:jar'
     manifest {
         attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.GradleJdkInstallationSetup'
@@ -39,6 +39,7 @@ tasks.withType(JavaCompile) {
 
 tasks.integrationTest {
     environment("PROJECT_VERSION", project.version)
+    dependsOn tasks.build
 }
 
 tasks.build.dependsOn tasks.fatJar
