--- a/versions.props
+++ b/versions.props
@@ -15,7 +15,7 @@ org.ow2.asm:asm = 9.2.1
 com.palantir.gradle.failure-reports:* = 1.9.0
 
 # dependency-upgrader:OFF
-com.palantir.baseline:* = 5.53.0-4-g0eccf57.dirty
+com.palantir.baseline:* = 5.53.0
 # dependency-upgrader:ON
 
 # conflict resolution
