--- a/versions.props
+++ b/versions.props
@@ -9,10 +9,12 @@ org.mockito:* = 5.12.0
 com.palantir.gradle.utils:* = 0.1.0
 com.google.guava:guava = 33.2.0-jre
 commons-io:commons-io = 2.16.1
+org.apache.commons:commons-compress = 1.26.1
 com.palantir.gradle.auto-parallelizable:* = 1.4.0
+org.ow2.asm:asm = 9.2.1
 
 # dependency-upgrader:OFF
-com.palantir.baseline:* = 5.26.0
+com.palantir.baseline:* = 5.53.0
 # dependency-upgrader:ON
 
 # conflict resolution
