bug fix: generate all the jdks from jdksExtension, not only from baseline-java-versions

--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -43,3 +43,10 @@ tasks.integrationTest {
 }
 
 tasks.build.dependsOn tasks.fatJar
+
+// DO NOT UPDATE! This needs to be kept as low as possible, such that it is compatible with all the jdk versions the
+// consumers would want to set up with the JDK auto-management workflow (used by ./gradle-jdks-setup.sh and GradleWrapperMain.java classes)
+javaVersion {
+    target = 11
+    runtime = 11
+}
