--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -34,7 +34,7 @@ tasks.register('fatJar', Jar) {
 }
 
 tasks.withType(JavaCompile) {
-    options.errorprone.disable 'PreferSafeLoggableExceptions'
+    options.errorprone.disable 'PreferSafeLoggableExceptions', 'StringSplitter'
 }
 
 tasks.integrationTest {
