--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jetbrains.intellij" version "1.17.3" apply false
+    id 'org.jetbrains.gradle.plugin.idea-ext' version "1.1.1"
+}
+
 apply plugin: 'com.palantir.external-publish'
 apply plugin: 'com.palantir.git-version'
 apply plugin: 'com.palantir.consistent-versions'
