--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -2,14 +2,16 @@ apply plugin: 'java'
 apply plugin: 'com.palantir.external-publish-jar'
 apply plugin: 'org.unbroken-dome.test-sets'
 
-
 testSets {
     integrationTest
 }
 
 dependencies {
     // Avoid adding large compile dependencies here, as they will also be added in the gradle-jdks-setup-all*.jar using the fatJar task
+    implementation gradleApi()
     implementation project(':gradle-jdks-setup-common')
+    implementation 'net.bytebuddy:byte-buddy'
+    implementation 'net.bytebuddy:byte-buddy-agent'
 
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
@@ -27,9 +29,10 @@ tasks.register('fatJar', Jar) {
     dependsOn tasks.jar, ':gradle-jdks-setup-common:jar'
     manifest {
         attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.IntelijGradleJdkSetup'
+        attributes 'Premain-Class': 'com.palantir.gradle.jdks.setup.GradleAgent'
     }
     archiveBaseName = 'gradle-jdks-setup-all'
-    duplicatesStrategy = DuplicatesStrategy.FAIL
+    duplicatesStrategy = DuplicatesStrategy.WARN
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
@@ -52,3 +55,5 @@ javaVersion {
     target = 11
     runtime = 11
 }
+
+
