--- a/gradle-jdks-setup/build.gradle
+++ b/gradle-jdks-setup/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 tasks.register('fatJar', Jar) {
     dependsOn tasks.jar, ':gradle-jdks-setup-common:jar'
     manifest {
-        attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.IntelijGradleJdkSetup'
+        attributes 'Main-Class': 'com.palantir.gradle.jdks.setup.GradleJdkInstallationSetup'
     }
     archiveBaseName = 'gradle-jdks-setup-all'
     duplicatesStrategy = DuplicatesStrategy.FAIL
@@ -52,3 +52,5 @@ javaVersion {
     target = 11
     runtime = 11
 }
+
+
