--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     annotationProcessor 'org.immutables:value'
 
     testImplementation gradleTestKit()
+    testImplementation project(':gradle-jdks-settings')
     testImplementation 'com.netflix.nebula:nebula-test'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core'
@@ -46,6 +47,12 @@ gradlePlugin {
             description = 'Auto-provisions specific versions of JDKs'
             implementationClass = 'com.palantir.gradle.jdks.JdksPlugin'
         }
+        jdksIdea {
+            id = 'com.palantir.jdks-idea'
+            displayName = 'Palantir Gradle JDK Configuring IDEA'
+            description = 'Plugin for configuring the IDEA Gradle JDK setup'
+            implementationClass = 'com.palantir.gradle.jdks.PalantirGradleJdkIdeaPlugin'
+        }
         palantirCa {
             id = 'com.palantir.jdks.palantir-ca'
             displayName = 'Palantir CA for gradle-jdks'
@@ -53,13 +60,9 @@ gradlePlugin {
             implementationClass = 'com.palantir.gradle.jdks.PalantirCaPlugin'
         }
     }
-}
-
-pluginBundle {
     website = 'https://github.com/palantir/gradle-jdks'
     vcsUrl = 'https://github.com/palantir/gradle-jdks'
     description = 'Download specific JDKs versions automatically'
-    tags = ['java', 'jdks']
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -70,6 +73,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.test {
     environment("PROJECT_VERSION", project.version)
     systemProperty 'ignoreDeprecations', 'true'
+    dependsOn project(':gradle-jdks-settings').tasks.named('build')
 }
 
 tasks.withType(ProcessResources.class).configureEach {
