--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'gradle-jdks-distributions'
 include 'gradle-jdks-json'
 include 'gradle-jdks-setup'
 include 'gradle-jdks-setup-common'
+include 'idea-plugin'
+include 'gradle-jdks-settings'
 
