--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -54,15 +54,12 @@ gradlePlugin {
             implementationClass = 'com.palantir.gradle.jdks.PalantirCaPlugin'
         }
         patchJdks {
-            id = 'com.palantir.jdks-properties'
+            id = 'com.palantir.jdks.settings'
             displayName = 'Palantir JDK Auto-provisioning Plugin'
             description = 'Auto-provisions specific versions of JDKs'
             implementationClass = 'com.palantir.gradle.jdks.PatchToolchainJdkPlugin'
         }
     }
-}
-
-gradlePlugin {
     website = 'https://github.com/palantir/gradle-jdks'
     vcsUrl = 'https://github.com/palantir/gradle-jdks'
     description = 'Download specific JDKs versions automatically'
