--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,5 @@ include 'gradle-jdks-json'
 include 'gradle-jdks-setup'
 include 'gradle-jdks-setup-common'
 include 'idea-plugin'
+include 'gradle-jdks-settings'
+
