--- a/gradle-jdks/build.gradle
+++ b/gradle-jdks/build.gradle
@@ -46,18 +46,21 @@ gradlePlugin {
             displayName = 'Palantir JDK Auto-provisioning Plugin'
             description = 'Auto-provisions specific versions of JDKs'
             implementationClass = 'com.palantir.gradle.jdks.JdksPlugin'
+            tags.addAll("java", "jdks")
         }
         jdksIdea {
             id = 'com.palantir.jdks-idea'
             displayName = 'Palantir Gradle JDK Configuring IDEA'
             description = 'Plugin for configuring the IDEA Gradle JDK setup'
             implementationClass = 'com.palantir.gradle.jdks.PalantirGradleJdkIdeaPlugin'
+            tags.addAll("java", "jdks", "idea")
         }
         palantirCa {
             id = 'com.palantir.jdks.palantir-ca'
             displayName = 'Palantir CA for gradle-jdks'
             description = 'Includes the Palantir CA from the system truststore'
             implementationClass = 'com.palantir.gradle.jdks.PalantirCaPlugin'
+            tags.addAll("java", "jdks", "palantir ca")
         }
     }
     website = 'https://github.com/palantir/gradle-jdks'
