--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -12,5 +12,6 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <postStartupActivity implementation="com.palantir.gradle.jdks.InitialConfigurationStartupActivity"/>
+    <externalSystemTaskNotificationListener implementation="com.palantir.gradle.jdks.MyExternalSystemTaskNotificationListener"/>
   </extensions>
 </idea-plugin>
